# selfHealingDistributedCache

./: Cargo.toml  README.md
config/: cluster.json
crates/common/: Cargo.toml  build.rs
crates/common/src/: hashring.rs  lib.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  main.rs
crates/node/src/cache/: expiry.rs  mod.rs  store.rs
crates/node/src/gossip/: protocol.rs  server.rs  state.rs
crates/node/src/grpc/: mod.rs  service.rs
crates/node/src/rebalance/: mod.rs
crates/node/src/resp/: encoder.rs  mod.rs  parser.rs  server.rs
crates/node/tests/: integration_join.rs
crates/router/: Cargo.toml
crates/router/src/: client.rs  lib.rs  main.rs  router.rs
crates/router/src/gossip/: mod.rs
crates/router/src/grpc/: mod.rs  service.rs
crates/router/src/health/: mod.rs
crates/router/src/membership/: mod.rs
crates/router/src/replication/: config.rs  coordinator.rs  mod.rs
proto/: cache.proto  gossip.proto
tools/demo/: Cargo.toml
tools/demo/src/: main.rs
