[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
xxhash-rust = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
